tests/ui/methods/supertrait-shadowing/unstable.on_normal.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/unstable.rs:25:8
   |
LL |     ().hello();
   |        ^^^^^ multiple `hello` found
   |
   = note: candidate #1 is defined in an impl of the trait `shadowed_stability::A` for the type `T`
   = note: candidate #2 is defined in an impl of the trait `shadowed_stability::B` for the type `T`
help: disambiguate the method for candidate #1
   |
LL -     ().hello();
LL +     shadowed_stability::A::hello(&());
   |
help: disambiguate the method for candidate #2
   |
LL -     ().hello();
LL +     shadowed_stability::B::hello(&());
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0034`.
